--- a/GarmEngine/GarmEngine.vcxproj
+++ b/GarmEngine/GarmEngine.vcxproj
@@ -29,6 +29,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
+    <WholeProgramOptimization>false</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -69,10 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>E:\Prog\Middleware\glm;$(IncludePath)</IncludePath>
+    <IncludePath>E:\Prog\Middleware\glm;E:\Prog\Middleware\Soil\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Prog\Middleware\Soil\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>E:\Prog\Middleware\glm;$(IncludePath)</IncludePath>
+    <IncludePath>E:\Prog\Middleware\glm;E:\Prog\Middleware\Soil\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Prog\Middleware\Soil\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -82,7 +85,9 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <SubSystem>NotSet</SubSystem>
+      <SubSystem>
+      </SubSystem>
+      <AdditionalDependencies>SOILd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -104,6 +109,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>SOIL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -128,6 +134,7 @@
     <ClCompile Include="Graphics\Mesh2D.cpp" />
     <ClCompile Include="Graphics\Renderable2D.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
+    <ClCompile Include="Graphics\Texture.cpp" />
     <ClCompile Include="Graphics\VertexArray.cpp" />
     <ClCompile Include="Graphics\VertexBuffer.cpp" />
     <ClCompile Include="main.cpp" />
@@ -138,7 +145,9 @@
     <ClInclude Include="Context\Context.h" />
     <ClInclude Include="Context\InputHandler.h" />
     <ClInclude Include="Graphics\Group2D.h" />
+    <ClInclude Include="Graphics\Material.h" />
     <ClInclude Include="Graphics\Layer.h" />
+    <ClInclude Include="Graphics\Texture.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Graphics\Mesh2D.h" />
     <ClInclude Include="Graphics\IndexBuffer.h" />
