--- a/GarmEngine/GarmEngine.vcxproj
+++ b/GarmEngine/GarmEngine.vcxproj
@@ -70,12 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>E:\Prog\Middleware\glm;E:\Prog\Middleware\Soil\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Prog\Middleware\Soil\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
+    <IncludePath>E:\Prog\Middleware\glm;E:\Prog\Middleware\freetype\include;E:\Prog\Middleware\Soil\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Prog\Middleware\Soil\lib;E:\Prog\Middleware\freetype\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>E:\Prog\Middleware\glm;E:\Prog\Middleware\Soil\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Prog\Middleware\Soil\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\Prog\Middleware\glm;E:\Prog\Middleware\freetype\include;E:\Prog\Middleware\Soil\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Prog\Middleware\Soil\lib;E:\Prog\Middleware\freetype\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -87,7 +87,7 @@
     <Link>
       <SubSystem>
       </SubSystem>
-      <AdditionalDependencies>SOIL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SOIL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -109,7 +109,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SOIL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SOIL.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -134,6 +134,8 @@
     <ClCompile Include="Graphics\Mesh2D.cpp" />
     <ClCompile Include="Graphics\Renderable2D.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
+    <ClCompile Include="Graphics\Simple2DLayer.cpp" />
+    <ClCompile Include="Graphics\TextRendering.cpp" />
     <ClCompile Include="Graphics\Texture.cpp" />
     <ClCompile Include="Graphics\VertexArray.cpp" />
     <ClCompile Include="Graphics\VertexBuffer.cpp" />
@@ -147,6 +149,8 @@
     <ClInclude Include="Graphics\Group2D.h" />
     <ClInclude Include="Graphics\Material.h" />
     <ClInclude Include="Graphics\Layer.h" />
+    <ClInclude Include="Graphics\Simple2DLayer.h" />
+    <ClInclude Include="Graphics\TextRendering.h" />
     <ClInclude Include="Graphics\Texture.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Graphics\Mesh2D.h" />
