--- a/GarmEngine/GarmEngine.vcxproj
+++ b/GarmEngine/GarmEngine.vcxproj
@@ -128,10 +128,15 @@
   <ItemGroup>
     <ClCompile Include="Context\Context.cpp" />
     <ClCompile Include="Context\InputHandler.cpp" />
+    <ClCompile Include="Graphics\Buffer.cpp" />
+    <ClCompile Include="Graphics\FontMap.cpp" />
+    <ClCompile Include="Graphics\FontRenderable.cpp" />
     <ClCompile Include="Graphics\Group2D.cpp" />
     <ClCompile Include="Graphics\IndexBuffer.cpp" />
     <ClCompile Include="Graphics\Layer.cpp" />
     <ClCompile Include="Graphics\Mesh2D.cpp" />
+    <ClCompile Include="Graphics\MeshData.cpp" />
+    <ClCompile Include="Graphics\Renderable.cpp" />
     <ClCompile Include="Graphics\Renderable2D.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
     <ClCompile Include="Graphics\Simple2DLayer.cpp" />
@@ -146,9 +151,14 @@
   <ItemGroup>
     <ClInclude Include="Context\Context.h" />
     <ClInclude Include="Context\InputHandler.h" />
+    <ClInclude Include="Graphics\Buffer.h" />
+    <ClInclude Include="Graphics\FontMap.h" />
+    <ClInclude Include="Graphics\FontRenderable.h" />
     <ClInclude Include="Graphics\Group2D.h" />
     <ClInclude Include="Graphics\Material.h" />
     <ClInclude Include="Graphics\Layer.h" />
+    <ClInclude Include="Graphics\MeshData.h" />
+    <ClInclude Include="Graphics\Renderable.h" />
     <ClInclude Include="Graphics\Simple2DLayer.h" />
     <ClInclude Include="Graphics\TextRendering.h" />
     <ClInclude Include="Graphics\Texture.h" />
@@ -157,7 +167,7 @@
     <ClInclude Include="Graphics\IndexBuffer.h" />
     <ClInclude Include="Graphics\Renderable2D.h" />
     <ClInclude Include="Graphics\Renderer.h" />
-    <ClInclude Include="Graphics\Notes.txt" />
+    <ClInclude Include="Graphics\Notes.h" />
     <ClInclude Include="Graphics\VertexArray.h" />
     <ClInclude Include="Graphics\VertexBuffer.h" />
     <ClInclude Include="platform.h" />
