--- a/GarmEngine/GarmEngine.vcxproj.filters
+++ b/GarmEngine/GarmEngine.vcxproj.filters
@@ -196,7 +196,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\fShader.shader" />
-    <None Include="Shaders\vShader.shader" />
+    <None Include="Shaders\f.shader" />
+    <None Include="Shaders\v.shader" />
+    <None Include="Shaders\fFont.shader" />
+    <None Include="Shaders\vFont.shader" />
   </ItemGroup>
 </Project>
