Tidy up, deleted old files. Made separate file for Vertex struct

--- a/GarmEngine/GarmEngine.vcxproj
+++ b/GarmEngine/GarmEngine.vcxproj
@@ -131,26 +131,18 @@
     <ClCompile Include="Graphics\Buffer.cpp" />
     <ClCompile Include="Graphics\FontMap.cpp" />
     <ClCompile Include="Graphics\FontRenderable.cpp" />
-    <ClCompile Include="Graphics\Group2D.cpp" />
     <ClCompile Include="Graphics\GUI\Button.cpp" />
     <ClCompile Include="Graphics\GUI\GUILayer.cpp" />
     <ClCompile Include="Graphics\GUI\GUIRenderer.cpp" />
     <ClCompile Include="Graphics\GUI\header.cpp" />
     <ClCompile Include="Graphics\GUI\Widget.cpp" />
     <ClCompile Include="Graphics\GUI\Window.cpp" />
-    <ClCompile Include="Graphics\IndexBuffer.cpp" />
     <ClCompile Include="Graphics\Layer.cpp" />
-    <ClCompile Include="Graphics\Mesh2D.cpp" />
     <ClCompile Include="Graphics\MeshData.cpp" />
     <ClCompile Include="Graphics\Renderable.cpp" />
-    <ClCompile Include="Graphics\Renderable2D.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
-    <ClCompile Include="Graphics\Simple2DLayer.cpp" />
-    <ClCompile Include="Graphics\TextRendering.cpp" />
     <ClCompile Include="Graphics\Texture.cpp" />
     <ClCompile Include="Graphics\TextureGenerator.cpp" />
-    <ClCompile Include="Graphics\VertexArray.cpp" />
-    <ClCompile Include="Graphics\VertexBuffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Graphics\Shader.cpp" />
     <ClCompile Include="Utility.cpp" />
@@ -161,7 +153,6 @@
     <ClInclude Include="Graphics\Buffer.h" />
     <ClInclude Include="Graphics\FontMap.h" />
     <ClInclude Include="Graphics\FontRenderable.h" />
-    <ClInclude Include="Graphics\Group2D.h" />
     <ClInclude Include="Graphics\GUI\Button.h" />
     <ClInclude Include="Graphics\GUI\GUILayer.h" />
     <ClInclude Include="Graphics\GUI\GUIRenderer.h" />
@@ -172,18 +163,12 @@
     <ClInclude Include="Graphics\Layer.h" />
     <ClInclude Include="Graphics\MeshData.h" />
     <ClInclude Include="Graphics\Renderable.h" />
-    <ClInclude Include="Graphics\Simple2DLayer.h" />
-    <ClInclude Include="Graphics\TextRendering.h" />
     <ClInclude Include="Graphics\Texture.h" />
     <ClInclude Include="Graphics\TextureGenerator.h" />
+    <ClInclude Include="Graphics\Vertex.h" />
     <ClInclude Include="Math.h" />
-    <ClInclude Include="Graphics\Mesh2D.h" />
-    <ClInclude Include="Graphics\IndexBuffer.h" />
-    <ClInclude Include="Graphics\Renderable2D.h" />
     <ClInclude Include="Graphics\Renderer.h" />
     <ClInclude Include="Graphics\Notes.h" />
-    <ClInclude Include="Graphics\VertexArray.h" />
-    <ClInclude Include="Graphics\VertexBuffer.h" />
     <ClInclude Include="platform.h" />
     <ClInclude Include="Graphics\Shader.h" />
     <ClInclude Include="Utility.h" />
