--- a/GarmEngine/GarmEngine.vcxproj
+++ b/GarmEngine/GarmEngine.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Graphics\GUI\GUILayer.cpp" />
     <ClCompile Include="Graphics\GUI\GUIRenderer.cpp" />
     <ClCompile Include="Graphics\GUI\header.cpp" />
+    <ClCompile Include="Graphics\GUI\TextField.cpp" />
     <ClCompile Include="Graphics\GUI\Widget.cpp" />
     <ClCompile Include="Graphics\GUI\Window.cpp" />
     <ClCompile Include="Graphics\Layer.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Graphics\GUI\GUIRenderer.h" />
     <ClInclude Include="Graphics\GUI\header.h" />
     <ClInclude Include="Graphics\GUI\Event.h" />
+    <ClInclude Include="Graphics\GUI\TextField.h" />
     <ClInclude Include="Graphics\GUI\Widget.h" />
     <ClInclude Include="Graphics\GUI\Window.h" />
     <ClInclude Include="Graphics\Material.h" />
