--- a/GarmEngine/GarmEngine.vcxproj.filters
+++ b/GarmEngine/GarmEngine.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Graphics\GUI\TextField.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics\GUI\TextInputField.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="platform.h">
@@ -156,6 +159,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics\GUI\TextField.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\GUI\TextInputField.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
