--- a/GarmEngine/GarmEngine.vcxproj
+++ b/GarmEngine/GarmEngine.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Graphics\GUI\GUILayer.cpp" />
     <ClCompile Include="Graphics\GUI\GUIRenderer.cpp" />
     <ClCompile Include="Graphics\GUI\header.cpp" />
+    <ClCompile Include="Graphics\GUI\Menu.cpp" />
     <ClCompile Include="Graphics\GUI\TextField.cpp" />
     <ClCompile Include="Graphics\GUI\TextInputField.cpp" />
     <ClCompile Include="Graphics\GUI\Widget.cpp" />
@@ -156,10 +157,12 @@
     <ClInclude Include="Graphics\FontMap.h" />
     <ClInclude Include="Graphics\FontRenderable.h" />
     <ClInclude Include="Graphics\GUI\Button.h" />
+    <ClInclude Include="Graphics\GUI\Console.h" />
     <ClInclude Include="Graphics\GUI\GUILayer.h" />
     <ClInclude Include="Graphics\GUI\GUIRenderer.h" />
     <ClInclude Include="Graphics\GUI\header.h" />
     <ClInclude Include="Graphics\GUI\Event.h" />
+    <ClInclude Include="Graphics\GUI\Menu.h" />
     <ClInclude Include="Graphics\GUI\TextField.h" />
     <ClInclude Include="Graphics\GUI\TextInputField.h" />
     <ClInclude Include="Graphics\GUI\Widget.h" />
