--- a/GarmEngine/GarmEngine.vcxproj.filters
+++ b/GarmEngine/GarmEngine.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="Graphics\GUI\Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="New Stuff\Renderere.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="platform.h">
@@ -171,6 +174,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics\GUI\Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="New Stuff\Renderere.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
